--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Angela's Personal Site</title>
+    <title>Suvigya's Personal Site</title>
   </head>
 
   <body>
     <table cellspacing="20">
       <tr>
         <td><img src="images/angela.png" alt="angela profile picture"></td>
-        <td><h1>Angela Yu</h1>
-        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
-        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+        <td><h1>Suvigya Agrawal</h1>
+        <p><em>Software Engineer @ <strong><a href="https://www.instamojo.com/">Instamojo</a></strong>.</em></p>
+        <p>I am an iOS and Web Developer. I ❤️ coffee and beers.</p></td>
       </tr>
     </table>
     <hr>
@@ -31,16 +31,12 @@
       </thead>
       <tbody>
         <tr>
-          <td>2009-2010</td>
-          <td>Researcher at The Institute of Cognitive Neurosciences</td>
+          <td>July-2019 - Present</td>
+          <td>Software Engineer</td>
         </tr>
         <tr>
-          <td>2010-2013</td>
-          <td>Lead Developer at Tempo App</td>
-        </tr>
-        <tr>
-          <td>2013-2015</td>
-          <td>Clinical Doctor at the National Health Service</td>
+          <td>Jan-2019 - Jun-2019</td>
+          <td>Software Engineer Intern</td>
         </tr>
       </tbody>
     </table>
