--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/angela.png" alt="angela profile picture"></td>
+        <td><img src="images/photo.png" alt="angela profile picture"></td>
         <td><h1>Suvigya Agrawal</h1>
         <p><em>Software Engineer @ <strong><a href="https://www.instamojo.com/">Instamojo</a></strong>.</em></p>
         <p>I am an iOS and Web Developer. I ❤️ coffee and beers.</p></td>
